--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.7.0",
+    "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0",
-    "socket.io": "^4.8.1"
+    "mongoose": "^8.19.3",
+    "socket.io": "^4.8.1",
+    "stripe": "^19.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
